--- a/app/src/main/res/layout/fragment_dialog_add_revenue.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_revenue.xml
@@ -1,161 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
+    <data>
+        <variable
+            name="data"
+            type="com.example.baseprojectandroid.models.data_display.DataDisplay" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:cardCornerRadius="7dp"
-        android:layout_marginBottom="2dp"
-        app:cardElevation="7dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TableLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="vertical"
-            android:stretchColumns="*">
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            app:cardCornerRadius="7dp"
+            android:layout_marginBottom="2dp"
+            app:cardElevation="7dp">
 
-            <TableRow android:layout_marginTop="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/lbl_category"
-                    android:textColor="@color/h383737"
-                    android:textSize="@dimen/font_size_16"
-                    android:textStyle="bold" />
-
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/spinner_dialog"
-                    android:gravity="center" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_pend" />
-            </TableRow>
-
-            <TableRow android:layout_marginTop="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/lbl_date"
-                    android:textColor="@color/h383737"
-                    android:textSize="@dimen/font_size_16"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/lbl_enter_infomation"
-                    android:backgroundTint="@color/h383737"
-                    android:enabled="false"
-                    android:id="@+id/edt_date_time"
-                    android:inputType="number"
-                    android:textSize="@dimen/font_size_14" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:id="@+id/img_date"
-                    android:src="@drawable/ic_date"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:clickable="true"
-                     />
-            </TableRow>
-
-            <TableRow android:layout_marginTop="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/lbl_price"
-                    android:textColor="@color/h383737"
-                    android:textSize="@dimen/font_size_16"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/lbl_enter_infomation"
-                    android:id="@+id/edt_price"
-                    android:inputType="number"
-                    android:textSize="@dimen/font_size_14" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/lbl_vnd"
-                    android:textSize="@dimen/font_size_16" />
-            </TableRow>
-
-            <TableRow android:layout_marginTop="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/lbl_note"
-                    android:textColor="@color/h383737"
-                    android:textSize="@dimen/font_size_16"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/lbl_enter_infomation"
-                    android:id="@+id/edt_node"
-                    android:inputType="text"
-                    android:textSize="@dimen/font_size_14" />
-
-            </TableRow>
-
-            <LinearLayout
+            <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="20dp"
-                android:gravity="end">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical"
+                android:stretchColumns="*">
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:backgroundTint="@color/h383737"
-                    android:gravity="center"
-                    android:text="@string/lbl_save"
-                    android:id="@+id/btn_save"
-                    android:textAppearance="@style/MyStyle"
-                    android:textColor="@color/hfff"
-                    android:textSize="@dimen/font_size_16" />
+                <TableRow android:layout_marginTop="10dp">
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:backgroundTint="@color/h383737"
-                    android:gravity="center"
-                    android:text="@string/lbl_cancel"
-                    android:id="@+id/btn_cancel"
-                    android:textAppearance="@style/MyStyle"
-                    android:textColor="@color/hfff"
-                    android:textSize="@dimen/font_size_16" />
-            </LinearLayout>
-        </TableLayout>
-    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@{data.titleCategory}"
+                        android:textColor="@color/h383737"
+                        android:textSize="@dimen/font_size_16"
+                        android:textStyle="bold" />
 
-</LinearLayout>
+                    <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/spinner_dialog"
+                        android:gravity="center" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_pend" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@{data.titleDate}"
+                        android:textColor="@color/h383737"
+                        android:textSize="@dimen/font_size_16"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/lbl_enter_infomation"
+                        android:backgroundTint="@color/h383737"
+                        android:enabled="false"
+                        android:id="@+id/edt_date_time"
+                        android:inputType="number"
+                        android:textSize="@dimen/font_size_14" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:id="@+id/img_date"
+                        android:src="@drawable/ic_date"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:clickable="true" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@{data.titlePrice}"
+                        android:textColor="@color/h383737"
+                        android:textSize="@dimen/font_size_16"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/lbl_enter_infomation"
+                        android:id="@+id/edt_price"
+                        android:inputType="number"
+                        android:textSize="@dimen/font_size_14" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@string/lbl_vnd"
+                        android:textSize="@dimen/font_size_16" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@{data.titleNote}"
+                        android:textColor="@color/h383737"
+                        android:textSize="@dimen/font_size_16"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/lbl_enter_infomation"
+                        android:id="@+id/edt_node"
+                        android:inputType="text"
+                        android:textSize="@dimen/font_size_14" />
+
+                </TableRow>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="end">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@color/h383737"
+                        android:gravity="center"
+                        android:text="@{data.titleSave}"
+                        android:id="@+id/btn_save"
+                        android:textAppearance="@style/MyStyle"
+                        android:textColor="@color/hfff"
+                        android:textSize="@dimen/font_size_16" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@color/h383737"
+                        android:gravity="center"
+                        android:text="@{data.titleCancel}"
+                        android:id="@+id/btn_cancel"
+                        android:textAppearance="@style/MyStyle"
+                        android:textColor="@color/hfff"
+                        android:textSize="@dimen/font_size_16" />
+                </LinearLayout>
+            </TableLayout>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+</layout>
